meetup-groups: Fix Finland (and Norway)
This makes space for all the country filter buttons and resizes the
combined button when the viewport is small in order to avoid
having it overlap the heading.

--- a/assets/style/app.scss
+++ b/assets/style/app.scss
@@ -84,6 +84,12 @@
         }
     }
 
+    @media (max-width: 375px) {
+        .country-btn {
+            width: 80px;
+        }
+    }
+
     .v-snack__content{
         a {
             color: white;
